dmz-skel-master/iptables-rules
# Do not edit. This file is provisioned by ansible.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# permitir loopback 
-A INPUT -i lo -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 

# permitir ICMP contra nodos de internet
-A OUTPUT -p ICMP -j ACCEPT


# permitir UDP, DNS,HTTP ,HTTPS y FTP pasivo
-A INPUT -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 22 -j ACCEPT
-A INPUT -j ACCEPT -i eth2 -p tcp --sport 1024:65535 -m multiport --dports 80,443
-A OUTPUT -j ACCEPT -o eth1 -p tcp --sport 1024:65535 -m multiport --dports 80,443
-A OUTPUT -o eth1 -p udp --sport 1021:65535 --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -m state --state ESTABLISHED,RELATED -j ACCEPT 

# acceso ilimitado en LAN 
-A FORWARD -i eth1 -o eth2 -m state --state NEW,ESTABLISHED,RELATED  -j ACCEPT 
-A FORWARD -i eth1 -o eth3 -m state --state NEW,ESTABLISHED,RELATED  -j ACCEPT 
-A FORWARD -i eth2 -o eth1 -m state --state NEW,ESTABLISHED,RELATED  -j ACCEPT
-A FORWARD -i eth2 -o eth3 -m state --state NEW,ESTABLISHED,RELATED  -j ACCEPT  
-A FORWARD -i eth3 -o eth1 -m state --state NEW,ESTABLISHED,RELATED  -j ACCEPT
-A FORWARD -i eth3 -o eth2 -m state --state NEW,ESTABLISHED,RELATED  -j ACCEPT 

# meterlo al log
-A INPUT -j LOG


COMMIT
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
#redirigir trafico puerto 90 a proxy
-A PREROUTING -i eth2 -p tcp --dport 80 -j DNAT --to 192.168.1.150:3128
-A PREROUTING -i eth1 -p tcp --dport 80 -j REDIRECT --to-port 3128
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
